Changes to notebook

--- a/notebooks/cleaning.ipynb
+++ b/notebooks/cleaning.ipynb
@@ -23,150 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "961d527f",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'altair'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpathlib\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Path\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01maltair\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01malt\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpolars\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpl\u001b[39;00m\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'altair'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "\n",
-    "import altair as alt\n",
-    "import polars as pl\n"
+    "from pipelines import CitiesStations\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3d8e9b36",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class CitiesStations():\n",
-    "    def __init__(self, country: str, cities_csv:Path | str, stations_csv:Path | str):\n",
-    "        self.cities: pl.LazyFrame = pl.scan_csv(cities_csv)\n",
-    "        self.stations: pl.LazyFrame = pl.scan_csv(stations_csv)\n",
-    "        self.country: str = country\n",
-    "        self.ldf: pl.LazyFrame = self._build_ldf()\n",
-    "        self.df: pl.DataFrame | None = None\n",
-    "\n",
-    "    def _build_ldf(self) -> pl.LazyFrame:\n",
-    "        return(\n",
-    "            self.filter_cities_by_country(self.cities, self.country)\n",
-    "            .pipe(lambda ldf: self.join_on_city_id(self.stations, ldf))\n",
-    "            .pipe(self.rename_name_right_to_city)\n",
-    "            .pipe(self.rename_buildstart_to_start)\n",
-    "            .pipe(self.drop_empty_country_rows)\n",
-    "            .pipe(self.drop_empty_start)\n",
-    "            .pipe(self.change_start_to_datetime)\n",
-    "        )\n",
-    "\n",
-    "    def _collect_df(self, ldf: pl.LazyFrame, reset: bool = True) -> pl.DataFrame:\n",
-    "        if reset or self.df is None:\n",
-    "            self.df = ldf.collect()\n",
-    "        return self.df\n",
-    "\n",
-    "    def show_graph(self) -> None:\n",
-    "        self.ldf.show_graph()\n",
-    "\n",
-    "    def _start_count(self) -> pl.LazyFrame:\n",
-    "        return self.ldf.group_by(['city', 'start']).agg(\n",
-    "            pl.len()).sort(['city', 'start']).with_columns(\n",
-    "                pl.col('len').cum_sum().over('city').alias('cumulative')\n",
-    "            )\n",
-    "    def filter_cities_by_country(\n",
-    "            self,\n",
-    "            ldf: pl.LazyFrame,\n",
-    "            country:str\n",
-    "            ) -> pl.LazyFrame:\n",
-    "        return ldf.filter(pl.col('country') == country)\n",
-    "\n",
-    "    def join_on_city_id(\n",
-    "            self,\n",
-    "            left_ldf: pl.LazyFrame,\n",
-    "            right_ldf: pl.LazyFrame\n",
-    "            ) -> pl.LazyFrame:\n",
-    "        return left_ldf.join(\n",
-    "            right_ldf,\n",
-    "            left_on='city_id',\n",
-    "            right_on='id',\n",
-    "            how='left'\n",
-    "            )\n",
-    "\n",
-    "    def drop_empty_country_rows(\n",
-    "            self,\n",
-    "            ldf: pl.LazyFrame\n",
-    "            ) -> pl.LazyFrame:\n",
-    "        return ldf.drop_nulls(subset='country')\n",
-    "\n",
-    "    def rename_buildstart_to_start(self,\n",
-    "                                   ldf: pl.LazyFrame) -> pl.LazyFrame:\n",
-    "        return ldf.rename({'buildstart': 'start'})\n",
-    "\n",
-    "    def rename_name_right_to_city(self,\n",
-    "                                  ldf: pl.LazyFrame) -> pl.LazyFrame:\n",
-    "        return ldf.rename({'name_right':'city'})\n",
-    "\n",
-    "    def drop_empty_start(self,\n",
-    "                         ldf: pl.LazyFrame) -> pl.LazyFrame:\n",
-    "        return ldf.filter(pl.col('start') > 0)\n",
-    "\n",
-    "    def change_start_to_datetime(self,\n",
-    "                                 ldf: pl.LazyFrame) -> pl.LazyFrame:\n",
-    "        return ldf.with_columns(\n",
-    "            pl.datetime(pl.col('start'),1,1).alias('date_start')\n",
-    "        )\n",
-    "    def line_chart(self, file: str | None = None) -> alt.Chart:\n",
-    "        ldf = self._start_count()\n",
-    "        df = self._collect_df(ldf)\n",
-    "        chart: alt.Chart = df.plot.line(\n",
-    "            x='start',\n",
-    "            y='cumulative',\n",
-    "            color='city'\n",
-    "            )\n",
-    "        if file:\n",
-    "            chart.save(file) # type: ignore\n",
-    "        return chart\n",
-    "\n",
-    "    def histogram(self, stacked: bool = False, file:str | None = None) -> alt.Chart:\n",
-    "        df = self._collect_df(self.ldf)\n",
-    "        chart = alt.Chart(df).mark_bar( # type: ignore\n",
-    "        ).encode(\n",
-    "            x=alt.X(\n",
-    "                'start:Q',\n",
-    "                bin={'maxbins': 20},\n",
-    "                axis=alt.Axis(format='d', title='Year')\n",
-    "            ),\n",
-    "            y=alt.Y('count()', stack='zero',\n",
-    "                    axis=alt.Axis(title='Numer of Stations Built')\n",
-    "            )\n",
-    "        ).properties(\n",
-    "            title='Urban Rail Built in the US 1832-Present'\n",
-    "        )\n",
-    "\n",
-    "        if stacked:\n",
-    "            chart = chart.encode(color=alt.Color('city:N'))\n",
-    "\n",
-    "        if file:\n",
-    "            chart.save(file) # type: ignore\n",
-    "        return chart\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
    "id": "7b4c58c5",
    "metadata": {},
    "outputs": [
@@ -175,23 +42,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-7db3ffb365cf4a3b8d1f34d9ef5ac54a.vega-embed {\n",
+       "  #altair-viz-dec9d5f242e54e2ea7077aec1829a23c.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-7db3ffb365cf4a3b8d1f34d9ef5ac54a.vega-embed details,\n",
-       "  #altair-viz-7db3ffb365cf4a3b8d1f34d9ef5ac54a.vega-embed details summary {\n",
+       "  #altair-viz-dec9d5f242e54e2ea7077aec1829a23c.vega-embed details,\n",
+       "  #altair-viz-dec9d5f242e54e2ea7077aec1829a23c.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-7db3ffb365cf4a3b8d1f34d9ef5ac54a\"></div>\n",
+       "<div id=\"altair-viz-dec9d5f242e54e2ea7077aec1829a23c\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-7db3ffb365cf4a3b8d1f34d9ef5ac54a\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-7db3ffb365cf4a3b8d1f34d9ef5ac54a\");\n",
+       "    if (outputDiv.id !== \"altair-viz-dec9d5f242e54e2ea7077aec1829a23c\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-dec9d5f242e54e2ea7077aec1829a23c\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -246,7 +113,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "047179ab",
    "metadata": {},
    "outputs": [
@@ -268,23 +135,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-6df245208b304625943c336c6aa72a45.vega-embed {\n",
+       "  #altair-viz-cd9a8e61873640709d1b5a394f436cbe.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-6df245208b304625943c336c6aa72a45.vega-embed details,\n",
-       "  #altair-viz-6df245208b304625943c336c6aa72a45.vega-embed details summary {\n",
+       "  #altair-viz-cd9a8e61873640709d1b5a394f436cbe.vega-embed details,\n",
+       "  #altair-viz-cd9a8e61873640709d1b5a394f436cbe.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-6df245208b304625943c336c6aa72a45\"></div>\n",
+       "<div id=\"altair-viz-cd9a8e61873640709d1b5a394f436cbe\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-6df245208b304625943c336c6aa72a45\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-6df245208b304625943c336c6aa72a45\");\n",
+       "    if (outputDiv.id !== \"altair-viz-cd9a8e61873640709d1b5a394f436cbe\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-cd9a8e61873640709d1b5a394f436cbe\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -339,7 +206,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "e1b6c20f",
    "metadata": {},
    "outputs": [
@@ -359,23 +226,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-4ef87d504a2e444ab9bd10554a35b975.vega-embed {\n",
+       "  #altair-viz-528ffc7c9c6948bb82eb4ee10a688e6a.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-4ef87d504a2e444ab9bd10554a35b975.vega-embed details,\n",
-       "  #altair-viz-4ef87d504a2e444ab9bd10554a35b975.vega-embed details summary {\n",
+       "  #altair-viz-528ffc7c9c6948bb82eb4ee10a688e6a.vega-embed details,\n",
+       "  #altair-viz-528ffc7c9c6948bb82eb4ee10a688e6a.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-4ef87d504a2e444ab9bd10554a35b975\"></div>\n",
+       "<div id=\"altair-viz-528ffc7c9c6948bb82eb4ee10a688e6a\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-4ef87d504a2e444ab9bd10554a35b975\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-4ef87d504a2e444ab9bd10554a35b975\");\n",
+       "    if (outputDiv.id !== \"altair-viz-528ffc7c9c6948bb82eb4ee10a688e6a\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-528ffc7c9c6948bb82eb4ee10a688e6a\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -430,7 +297,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,9 +881,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (myenv)",
+   "display_name": "ddi13-eda-case-study",
    "language": "python",
-   "name": "myenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
